--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!-- 
 	Eugene Blog Page
 	Author: Eugene Hong
-	Date: 10/23/18
+	Date: 02/19/19
 	
 	Filename:	aboutme.html
 -->
@@ -37,7 +37,7 @@
 		<p>
 		Hello! Welcome to my blog! My name is Eugene Hong and I currently a student at 
 		the Waldorf School of Garden City. I'm incredibly passionate about music and love 
-		to play sports. I've been playing the piano since the age of 3, and I still love 
+		to play sports. I've been playing the piano since the age of three, and I still love 
 		to perform and practice to this day. I have been attending the Manhattan School 
 		of Music and have taken various Master Classes at the Julliard Pre-College for 
 		around 8 years now because I see it as an opportunity to expand my musical 
