--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@
 		to play sports. I've been playing the piano since the age of three, and I still love 
 		to perform and practice to this day. I have been attending the Manhattan School 
 		of Music and have taken various Master Classes at the Julliard Pre-College for 
-		around 8 years now because I see it as an opportunity to expand my musical 
+		around eight years now because I see it as an opportunity to expand my musical 
 		career. In my free time, I enjoy hanging out with my friends and playing 
 		basketball at the local gym.
 		More info about my musical background can be found <a href="musicbio.html">here</a>!
