--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,7 @@
 		<h3>Education</h3>
 		<ul>
 			<li>P.S. 41 (Grade K-2)</li>
-			<li>Lakeville School (Grade 2-5)</li>
+			<li>Lakeville Elementary School (Grade 2-5)</li>
 			<li>Great Neck South Middle School (Grade 6-8)</li>
 			<li>Great Neck South High School (Grade 9)</li>
 			<li>The Waldorf School of Garden City (Grade 9-Present)</li>
