--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<meta charset="utf-8">
 		<title>Eugene's Blog</title>
+			<script>
+			var today = new Date();
+			document.getElementById('dtText').innerHTML=today;
+			</script>
 	</head>
 	
 <body>
