--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 <body>
 
-<marquee><div id="para1"></div></marquee>
+<div id="para1"></div>
 <script>
 			document.getElementById("para1").innerHTML = formatAMPM();
 			function formatAMPM() {
