--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
 
 <body>
 	
-<marquee><div id="para1"></div></marquee>
+<marquee><div class="ticker" id="para1"></div></marquee>
 <script>
 			document.getElementById("para1").innerHTML = formatAMPM();
 			function formatAMPM() {
