--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 <body>
 
-<div class="ticker" id="para1"></div>
+<marquee><div class="ticker" id="para1"></div></marquee>
 <script>
 			document.getElementById("para1").innerHTML = formatAMPM();
 			function formatAMPM() {
