--- a/table.html
+++ b/table.html
@@ -19,7 +19,7 @@
 	</head>
 <body>
 
-<div id="para1"></div>
+<marquee><div class="ticker" id="para1"></div></marquee>
 <script>
 			document.getElementById("para1").innerHTML = formatAMPM();
 			function formatAMPM() {
