--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 	<li>
 	<a href="table.html">More Information</a>
 	</li>
+	
+	<li>
+	<a href="photooftheday.html">Photos of the Day</a>
+	</li>
 </ul>
 </nav>
 	
