--- a/musicbio.html
+++ b/musicbio.html
@@ -44,6 +44,10 @@
 	<li>
 	<a href="table.html">More Information</a>
 	</li>
+	
+	<li>
+	<a href="photooftheday.html">Photos of the Day</a>
+	</li>
 </ul>
 </nav>
 		<h1>Biography</h1>
