--- a/table.html
+++ b/table.html
@@ -50,6 +50,10 @@
 	<li>
 	<a id="active" href="table.html">More Information</a>
 	</li>
+	
+	<li>
+	<a href="photooftheday.html">Photos of the Day</a>
+	</li>
 </ul>
 </nav>
 
