--- a/aboutme.html
+++ b/aboutme.html
@@ -22,8 +22,8 @@
 			minutes = d.getMinutes().toString().length == 1 ? '0'+d.getMinutes() : d.getMinutes(),
 			hours = d.getHours().toString().length == 1 ? '0'+d.getHours() : d.getHours(),
 			ampm = d.getHours() >= 12 ? 'pm' : 'am',
-			months = ['January','February','March','April','May','June','July','August','September','October','November','December'],
-			days = ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'];
+			months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'],
+			days = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'];
 			return days[d.getDay()]+' '+months[d.getMonth()]+' '+d.getDate()+' '+d.getFullYear()+' '+hours+':'+minutes+ampm;
 		}
 </script>
@@ -44,6 +44,10 @@
 	
 	<li>
 	<a href="table.html">More Information</a>
+	</li>
+	
+	<li>
+	<a href="photooftheday.html">Photos of the Day</a>
 	</li>
 </ul>
 </nav>
