--- a/photooftheday.html
+++ b/photooftheday.html
@@ -64,12 +64,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=2">
 	<style>
 	
-		* {box-sizing: border-box}
-		body {font-family: Verdana, sans-serif; margin:30}
+		{box-sizing: border-box}
+		body {font-family: 'Titillium Web', Times New Roman;}
 		.mySlides {display: none}			img {vertical-align: middle;}
 
 .slideshow-container {
-	max-width: 1000px;
+	max-width: 500px;
 	position: relative;
 	margin: auto;
 
@@ -171,62 +171,67 @@
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="images/arvier.jpg" style="width:100%">
-  <div class="text">Arvier by Gianluca Basso</div>
+	<div class="numbertext">1 / 3</div>
+	<img src="images/arvier.jpg" style="width:100%">
+	<div class="text">Arvier by Gianluca Basso</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="images/waiting.jpg" style="width:100%">
-  <div class="text">Waiting by Ken Ratcliffe</div>
+	<div class="numbertext">2 / 3</div>
+        <img src="images/waiting.jpg" style="width:100%">
+        <div class="text">Waiting by Ken Ratcliffe</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="images/thoughtful.jpg" style="width:100%">
-  <div class="text">Thoughtful by Ken Ratcliffe</div>
+        <div class="numbertext">3 / 3</div>
+        <img src="images/thoughtful.jpg" style="width:100%">
+        <div class="text">Thoughtful by Ken Ratcliffe</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 </div>
+
 <br>
 
 <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
+	<span class="dot" onclick="currentSlide(1)"></span> 
+        <span class="dot" onclick="currentSlide(2)"></span> 
+        <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
 
 <script>
+
 var slideIndex = 1;
 showSlides(slideIndex);
 
 function plusSlides(n) {
-  showSlides(slideIndex += n);
+	showSlides(slideIndex += n);
 }
 
 function currentSlide(n) {
-  showSlides(slideIndex = n);
+	showSlides(slideIndex = n);
 }
 
 function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";  
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
+	var i;
+	var slides = document.getElementsByClassName("mySlides");
+	var dots = document.getElementsByClassName("dot");
+	if (n > slides.length) {slideIndex = 1}    
+	if (n < 1) {slideIndex = slides.length}
+	for (i = 0; i < slides.length; i++) {
+	slides[i].style.display = "none";  
 }
+
+	for (i = 0; i < dots.length; i++) {
+		dots[i].className = dots[i].className.replace(" active", "");
+}
+
+	slides[slideIndex-1].style.display = "block";  
+	dots[slideIndex-1].className += " active";
+}
+
 </script>
 
 </body>
